Se añade userName al home

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,7 +34,7 @@
             <ion-button
               expand="full"
               type="submit"
-              routerLink="/home"
+              (click)="goToPagina2()"
               >Iniciar sesión</ion-button
             >
           </div>
@@ -42,7 +42,6 @@
             <ion-button
               expand="full"
               type="submit"
-              routerLink="/home"
               >Registrarse</ion-button
             >
           </div>
