--- a/src/app/switch-user/switch-user.page.html
+++ b/src/app/switch-user/switch-user.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> TeLlevoApp </ion-title>
+    <ion-title> DuoCarApp </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">TeLlevoApp</ion-title>
+      <ion-title size="large">DuoCarApp</ion-title>
     </ion-toolbar>
   </ion-header>
 
