Cambios pequeños en la tipografía

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Bienvenido</strong>
+    <strong>Bienvenid@</strong>
     <p>{{username}}</p>
   </div>
 </ion-content>
