--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,7 +14,7 @@
   <div id="container">
     <ion-card id="loginCard">
       <ion-card-header>
-        <ion-card-title>Bienvenide queride {{loginType}}</ion-card-title>
+        <ion-card-title>Bienvenid@ {{loginType}}</ion-card-title>
       </ion-card-header>
 
       <ion-card-content>
