--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,9 +1,54 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Registro</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content>
+  <div id="container">
+    <ion-card id="loginCard">
+      <ion-card-header>
+        <ion-card-title>Bienvenid@ {{loginType}}</ion-card-title>
+      </ion-card-header>
 
+      <ion-card-content>
+        <form [formGroup]="usuario">
+          <div>
+            <ion-item>
+              <ion-label position="floating">Nombre</ion-label>
+              <ion-input type="text" formControlName="user"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Apellido</ion-label>
+              <ion-input type="text" formControlName="user"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Correo</ion-label>
+              <ion-input type="text" formControlName="user"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Contraseña</ion-label>
+              <ion-input type="password" formControlName="pass"></ion-input>
+            </ion-item>
+          </div>
+
+          <div>
+
+            <ion-button expand="full" type="submit"(click)="goToPagina2()">Iniciar sesión</ion-button>
+
+          </div>
+          <div>
+
+            <ion-button expand="full" [routerLink]="['/register']">Registrarse</ion-button>
+            
+          </div>
+        </form>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
