--- a/src/app/switch-user/switch-user.page.html
+++ b/src/app/switch-user/switch-user.page.html
@@ -1,26 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> DuoCarApp </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header [translucent]="true"></ion-header>
 
-<ion-content [fullscreen]="true">
+<img src="./assets/coche.png" width="50" height="50">
+<ion-content color="warning" [fullscreen]="true" class="content"> 
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">DuoCarApp</ion-title>
+    <ion-toolbar color="warning">
+      <ion-title class="app_title" size="large">DuoCarApp</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Elige un tipo de usuario</ion-card-title>
-      </ion-card-header>
-
-      <ion-card-content>
-        <ion-button (click)="goToLogin('pasajero')">pasajero</ion-button>
-        <ion-button (click)="goToLogin('conductor')">conductor</ion-button>
-      </ion-card-content>
-    </ion-card>
+  <div class="center" color="warning" >
+    <ion-card-title color="light">Elige un tipo de usuario</ion-card-title>
+    <ion-card-content>
+      <ion-button color="light" shape="round" size="large" (click)="goToLogin('pasajero')">
+        <ion-icon slot="start" name="person"></ion-icon>
+        Pasajero
+      </ion-button>
+      <br>
+      <ion-button color="light" shape="round" size="large" (click)="goToLogin('conductor')">
+        <ion-icon slot="start" name="car-sport"></ion-icon>
+        Conductor
+      </ion-button>
+    </ion-card-content>
   </div>
 </ion-content>
