Enrutamiento y formulario de registro

--- a/src/app/home-conductor/home-conductor.page.html
+++ b/src/app/home-conductor/home-conductor.page.html
@@ -14,7 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Bienvenid@ pasajero</strong>
+    <strong>Bienvenid@ conductor</strong>
     <p>{{username}}</p>
   </div>
 </ion-content>
