--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -37,7 +37,7 @@
           </div>
           <div>
 
-            <ion-button [routerLink]="['/register']">Registrarse</ion-button>
+            <ion-button expand="full" (click)="toRegister()">Registrarse</ion-button>
             
           </div>
         </form>
