--- a/src/app/switch-user/switch-user.page.scss
+++ b/src/app/switch-user/switch-user.page.scss
@@ -1,12 +1,10 @@
-#switch-user-button{
-    text-align: center;
-    background-color: white !important;
-    color: black !important;
+.app_title{
+    text-align: center !important;
 }
 .center{
     text-align: center !important;
     position: absolute;
-    top: 25%;
+    top: 40%;
 }
 .content{
     position: relative;
