Se estilizan nuevos pages

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -30,6 +30,16 @@
                 <ion-input type="password" formControlName="pass" placeholder="Enter Pass"></ion-input>
               </ion-item>
             </ion-list>
+          </div>
+
+          <div>
+
+            <ion-button expand="full" type="submit"(click)="goToPagina2()">Iniciar sesión</ion-button>
+
+          </div>
+          <div>
+
+            <ion-button expand="full" (click)="toRegister()">Registrarse</ion-button>
             
           </div>
           <br />
