cambio de rutas

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -32,13 +32,13 @@
 
           <div>
 
-            <ion-button expand="full" type="submit"(click)="goToPagina2()">Iniciar sesión</ion-button>
+            <ion-button expand="full" type="submit"(click)="toHome()">Iniciar sesión</ion-button>
 
           </div>
           <div>
 
             <ion-button expand="full" (click)="toRegister()">Registrarse</ion-button>
-            
+
           </div>
         </form>
       </ion-card-content>
