--- a/src/app/register-car/register-car.page.html
+++ b/src/app/register-car/register-car.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Registro</ion-title>
+    <ion-title>Registro auto</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Registro</ion-title>
+      <ion-title size="large">Registro auto</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -21,27 +21,27 @@
           <div>
             <ion-item>
               <ion-label position="floating">Marca</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="marca"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Modelo</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="modelo"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Patente</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="patente"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Color</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="color"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Año</ion-label>
-              <ion-input type="text" formControlName="pass"></ion-input>
+              <ion-input type="text" formControlName="anio"></ion-input>
             </ion-item>
           </div>
           <div>
-            <ion-button expand="full">Registrar vehículo</ion-button>  
+            <ion-button expand="full" (click)="validateRegister()">Registrar vehículo</ion-button>
           </div>
         </form>
       </ion-card-content>
