--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -21,27 +21,27 @@
           <div>
             <ion-item>
               <ion-label position="floating">Nombre</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="nombre"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Apellido</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="apellido"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Correo</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="correo"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Telefono</ion-label>
-              <ion-input type="text" formControlName="user"></ion-input>
+              <ion-input type="text" formControlName="telefono"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Contraseña</ion-label>
-              <ion-input type="password" formControlName="pass"></ion-input>
+              <ion-input type="password" formControlName="contrasena"></ion-input>
             </ion-item>
           </div>
           <div>
-            <ion-button expand="full" (click) ="validateRegister()">Registrarse</ion-button>  
+            <ion-button expand="full" (click) ="validateRegister()">Registrarse</ion-button>
           </div>
         </form>
       </ion-card-content>
