--- a/src/app/home-conductor/home-conductor.page.html
+++ b/src/app/home-conductor/home-conductor.page.html
@@ -1,12 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      DuoCarApp
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
+<head>
+  <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css"
+    rel="stylesheet"
+  />
+</head>
 <ion-content [fullscreen]="true">
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button (click)="toHome()" tab="Home">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="toTripHistory()">
+        <ion-icon name="location"></ion-icon>
+        <ion-label>Hisorial</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="toProfile()">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-title> DuoCarApp </ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large"></ion-title>
@@ -14,7 +38,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>Bienvenid@ conductor</strong>
+    <strong>Bienvenid@</strong>
     <p>{{username}}</p>
   </div>
 </ion-content>
