Primera Integracion con mapbox

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 
       <ion-tab-button (click)="toTripHistory()">
         <ion-icon name="location"></ion-icon>
-        <ion-label>Hisorial</ion-label>
+        <ion-label>Historial</ion-label>
       </ion-tab-button>
 
       <ion-tab-button (click)="toProfile()">
@@ -20,7 +20,7 @@
 
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title> DuoCarApp </ion-title>
+      <ion-title>DuoCarApp</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -34,4 +34,6 @@
     <strong>Bienvenid@</strong>
     <p>{{username}}</p>
   </div>
+
+  <div id="mapa-mapbox"> </div>
 </ion-content>
