--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -24,4 +23,10 @@
 
 #container a {
   text-decoration: none;
+}
+
+#mapa-mapbox{
+  width: 100%;
+  height: 300px;
+  background-color: red;
 }
