--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -39,7 +39,7 @@
               size="default"
               expand="full"
               type="submit"
-              (click)="toHome()"
+              (click)="loginUser()"
               >Iniciar sesión
             </ion-button>
           </div>
