Primer proceso de css y animaciones

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content color="warning" [fullscreen]="true" class="content">
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large"> Login </ion-title>
+      <ion-title > Login </ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -22,11 +22,11 @@
           <div>
             <ion-list class="bg-transparent">
               <ion-item color="none" lines="top">
-                <ion-label position="floating">User</ion-label>
+                <ion-label position="floating">Usuario</ion-label>
                 <ion-input type="text" formControlName="user" placeholder="Enter User"></ion-input>
               </ion-item>
               <ion-item color="none" lines="top">
-                <ion-label position="floating">Password</ion-label>
+                <ion-label position="floating">Contraseña</ion-label>
                 <ion-input type="password" formControlName="pass" placeholder="Enter Pass"></ion-input>
               </ion-item>
             </ion-list>
