--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,56 +1,79 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Perfíl Usuario</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content [fullscreen]="true">
-<ion-header collapse="condense">
-  <ion-toolbar>
-    <ion-title size="large">Perfíl</ion-title>
+<ion-content color="warning" [fullscreen]="true" class="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>DuoCarApp</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-list>
-    <ion-item>
-      <ion-label position="stacked">Nombre</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese nombre" value="Esteban"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Apellido</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese apellido" value="Díaz"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Telefono</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese teléfono" value="99999999"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Correo</ion-label>
-      <ion-input [clearOnEdit]="true" placeholder="Ingrese correo electrónico" value="esteban@dido.cl"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Contraseña</ion-label>
-      <ion-input type="password" placeholder="Ingrese contraseña" value="1234"></ion-input>
-    </ion-item>
-    <ion-toolbar>
-      <ion-title size="large">Vehículo</ion-title>
+  <ion-header collapse="condense">
+    <ion-toolbar color="warning">
+      <ion-title size="large">Perfíl</ion-title>
     </ion-toolbar>
-    <ion-item>
-      <ion-label position="stacked">Marca</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese marca vehículo" value="Honda"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Modelo</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese modelo vehículo" value="CRV"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Patente</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese patente vehículo" value="55555h"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Color</ion-label>
-      <ion-input [clearInput]="true" placeholder="Ingrese color vehiculo" value="Rojo"></ion-input>
-    </ion-item>
-  </ion-list>
-</ion-content>
+  </ion-header>
+  <div id="container" color="warning">
+    <ion-card color="warning" id="profileCard">
+      <ion-card-content>
+        <form>
+          <div>
+            <ion-list class="bg-transparent">
+              <ion-item color="none" lines="top">
+                <ion-label position="stacked">Nombre</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese nombre" value="Esteban"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="stacked">Apellido</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese apellido" value="Díaz"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="stacked">Telefono</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese teléfono" value="99999999"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="stacked">Correo</ion-label>
+                <ion-input [clearOnEdit]="true" placeholder="Ingrese correo electrónico" value="esteban@dido.cl">
+                </ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="stacked">Contraseña</ion-label>
+                <ion-input type="password" placeholder="Ingrese contraseña" value="1234"></ion-input>
+              </ion-item>
+  <ion-header collapse="condense">
+    <ion-toolbar color="warning">
+      <ion-title class size="medium">vehículo</ion-title>
+    </ion-toolbar>
+  </ion-header>
+              <ion-item color="none" lines="top">
+                <ion-label position="floating">Marca</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese marca vehículo" value="Honda"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="floating">Modelo</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese modelo vehículo" value="CRV"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="floating">Patente</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese patente vehículo" value="55555h"></ion-input>
+              </ion-item>
+              <ion-item color="none" lines="top">
+                <ion-label position="floating">Color</ion-label>
+                <ion-input [clearInput]="true" placeholder="Ingrese color vehiculo" value="Rojo"></ion-input>
+              </ion-item>
+            </ion-list>
+          </div>
+          <br />
+          <div>
+            <ion-button 
+              color="dark"
+              expand="full" 
+              shape="round"
+              size="default"
+              type="submit"
+              >Guardar</ion-button>
+          </div>
+        </form>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  </ion-content>
 
 <ion-footer class="footer">
   <ion-tabs>
@@ -72,4 +95,3 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-footer>
-
