--- a/src/app/register-car/register-car.page.html
+++ b/src/app/register-car/register-car.page.html
@@ -40,7 +40,7 @@
           </div>
           <br />
           <div>
-            <ion-button color="dark" expand="full" shape="round" size="default" type="submit"
+            <ion-button color="dark" expand="full" shape="round" size="default"
               (click)="validateRegister()">Registrar</ion-button>
           </div>
         </form>
