cambios register y registerCar

--- a/src/app/register-car/register-car.page.html
+++ b/src/app/register-car/register-car.page.html
@@ -12,7 +12,7 @@
 
   <div id="container" color="warning">
     <ion-card id="registercarCard" color="warning">
-      <ion-card-content>
+      <ion-card-content class="scroll-content">
         <form>
           <div>
             <ion-list class="bg-transparent">
