--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,6 +34,12 @@
     <strong>Bienvenid@</strong>
     <p>{{username}}</p>
   </div>
-
-  <div id="mapa-mapbox"> </div>
+  <div id="wrapper">
+    <div id="map" #asMap  class="map-container"> </div>
+  </div>
+  <div id="wrapper">
+    <div id="geocoder" #asGeoCoder class="geocoder"></div>
+  </div>
+  
+ 
 </ion-content>
