--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -23,10 +23,8 @@
 .map-container{
   width: 100%;
   height: 350px;
-  border-radius: 1rem;
-  border: solid 10px;
-  box-shadow: 0 12.5px 10px,
-  0 100px 80px;
+  border-radius: 1rem black;
+  border: solid 10px black ;
 }
 .marker {
   width: 50px;
@@ -36,3 +34,14 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+.geocoder {
+  position: absolute;
+  z-index: 1;
+  width: 50%;
+  left: 50%;
+  margin-left: -25%;
+  top: 10px;
+  }
+  .mapboxgl-ctrl-geocoder {
+  min-width: 100%;
+  }
