--- a/src/app/home-conductor/home-conductor.page.html
+++ b/src/app/home-conductor/home-conductor.page.html
@@ -5,73 +5,76 @@
   /> -->
 </head>
 <ion-content [fullscreen]="true">
-
-  <ion-button fill="outline">
-    <ion-card>
+  <div class="marginForBar">
+    <ion-card *ngFor="let trip of viajesDisponibles">
       <ion-card-header>
-        <ion-card-title>Origen: Mi casa</ion-card-title>
-        <ion-card-title>Destino: Duoc UC</ion-card-title>
-        <ion-card-subtitle>Monto: 5000</ion-card-subtitle>
+        <ion-card-title>Origen: {{trip.origen}}</ion-card-title>
+        <ion-card-title>Destino: {{trip.destino}}</ion-card-title>
+        <ion-card-title>Monto: {{trip.monto}}</ion-card-title>
+        <ion-card-subtitle *ngIf="trip.status === 1">Estado: Disponible</ion-card-subtitle>
+        <ion-card-subtitle *ngIf="trip.status === 2">Estado: Esperando encuentro</ion-card-subtitle>
+        <ion-card-subtitle *ngIf="trip.status === 3">Estado: En curso</ion-card-subtitle>
+        <ion-card-subtitle *ngIf="trip.status === 4">Estado: Completado</ion-card-subtitle>
+        <ion-card-subtitle *ngIf="trip.status === 0">Estado: Cancelado</ion-card-subtitle>
       </ion-card-header>
+      <ion-button *ngIf="trip.status === 1" (click)="updateStatus(trip.id, 2, user.rut)">
+        Tomar
+      </ion-button>
+      <ion-button *ngIf="trip.status === 2" (click)="updateStatus(trip.id, 3, user.rut)">
+        Comenzar
+      </ion-button>
+      <ion-button *ngIf="trip.status === 3" (click)="updateStatus(trip.id, 4, user.rut)">
+        Completar
+      </ion-button>
+      <ion-button *ngIf="trip.status !== 1 && trip.status !== 0 && trip.status !== 4"
+        (click)="updateStatus(trip.id, 0, user.rut)">
+        Cancelar
+      </ion-button>
+      <ion-button disabled *ngIf="trip.status === 4">
+        Completado
+      </ion-button>
     </ion-card>
-  </ion-button >
-  <ion-button fill="outline">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Origen: Mi casa</ion-card-title>
-        <ion-card-title>Destino: Duoc UC</ion-card-title>
-        <ion-card-subtitle>Monto: 5000</ion-card-subtitle>
-      </ion-card-header>
-    </ion-card>
-  </ion-button>
-  <ion-button (click)="mostrarMapa()">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Origen: Mi casa</ion-card-title>
-        <ion-card-title>Destino: Duoc UC</ion-card-title>
-        <ion-card-subtitle>Monto: 5000</ion-card-subtitle>
-      </ion-card-header>
-    </ion-card>
-  </ion-button>
+  </div>
 
 
-  <ion-modal [isOpen]="isModalOpen">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Modal</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum quidem recusandae ducimus quos
-          reprehenderit. Veniam, molestias quos, dolorum consequuntur nisi deserunt omnis id illo sit cum qui. Eaque,
-          dicta.
-        </p>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+  <ion-modal [isOpen]=" isModalOpen">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Modal</ion-title>
+              <ion-buttons slot="end">
+                <ion-button (click)="setOpen(false)">Close</ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum quidem recusandae ducimus quos
+              reprehenderit. Veniam, molestias quos, dolorum consequuntur nisi deserunt omnis id illo sit cum qui.
+              Eaque,
+              dicta.
+            </p>
+          </ion-content>
+        </ng-template>
+        </ion-modal>
 
 
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button (click)="toHome()" tab="Home">
-        <ion-icon name="home"></ion-icon>
-        <ion-label>Home</ion-label>
-      </ion-tab-button>
+        <ion-tabs class="paraAtras">
+          <ion-tab-bar slot="top">
+            <ion-tab-button (click)="toHome()" tab="Home">
+              <ion-icon name="home"></ion-icon>
+              <ion-label>Home</ion-label>
+            </ion-tab-button>
 
-      <ion-tab-button (click)="toTripHistory()">
-        <ion-icon name="location"></ion-icon>
-        <ion-label>Hisorial</ion-label>
-      </ion-tab-button>
+            <ion-tab-button (click)="toTripHistory()">
+              <ion-icon name="location"></ion-icon>
+              <ion-label>Hisorial</ion-label>
+            </ion-tab-button>
 
-      <ion-tab-button (click)="toProfile()">
-        <ion-icon name="person"></ion-icon>
-        <ion-label>Perfil</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+            <ion-tab-button (click)="toProfile()">
+              <ion-icon name="person"></ion-icon>
+              <ion-label>Perfil</ion-label>
+            </ion-tab-button>
+          </ion-tab-bar>
+        </ion-tabs>
 </ion-content>
