--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,60 @@
 <ion-content [fullscreen]="true">
-  <ion-tabs>
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-title>DuoCarApp</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large"></ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <div id="container">
+    <strong>Bienvenid@</strong>
+    <p>{{userNameLastName}}</p>
+  </div>
+  <ion-card>
+    <ion-card-content>
+      <ion-subtitle>
+        En este mapa podrás ver tu ubicación y marcar tu siguiente destino, luego de decidirlo podrás pedir un viaje en el
+          formulario de abajo
+      </ion-subtitle>
+    </ion-card-content>
+  </ion-card>
+  <div id="wrapper">
+    <div id="map" #asMap class="map-container"> </div>
+  </div>
+  <div id="wrapper">
+    <div id="geocoder" #asGeoCoder class="geocoder"></div>
+  </div>
+
+  <ion-card-content>
+    <form [formGroup]="trip">
+      <div>
+        <ion-list class="bg-transparent">
+          <ion-item color="none" lines="top">
+            <ion-label position="floating">Origen</ion-label>
+            <ion-input id="origen" type="text" formControlName="origen" placeholder="Ingrese origen"></ion-input>
+          </ion-item>
+          <ion-item color="none" lines="top">
+            <ion-label position="floating">Destino</ion-label>
+            <ion-input id="destino" type="text" formControlName="destino" placeholder="Ingrese destino"></ion-input>
+          </ion-item>
+        </ion-list>
+      </div>
+      <br />
+      <div>
+        <ion-button color="dark" shape="round" size="default" expand="full" type="submit" (click)="postTrip()">Pedir
+        </ion-button>
+      </div>
+    </form>
+  </ion-card-content>
+
+
+  <ion-tabs class="paraAtras">
     <ion-tab-bar slot="bottom">
       <ion-tab-button (click)="toHome()">
         <ion-icon name="home"></ion-icon>
@@ -17,29 +72,4 @@
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
-
-  <ion-header [translucent]="true">
-    <ion-toolbar>
-      <ion-title>DuoCarApp</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large"></ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Bienvenid@</strong>
-    <p>{{username}}</p>
-  </div>
-  <div id="wrapper">
-    <div id="map" #asMap  class="map-container"> </div>
-  </div>
-  <div id="wrapper">
-    <div id="geocoder" #asGeoCoder class="geocoder"></div>
-  </div>
-  
- 
 </ion-content>
