--- a/src/app/trip-history/trip-history.page.html
+++ b/src/app/trip-history/trip-history.page.html
@@ -15,4 +15,23 @@
       Fecha: {{trip.horaSalida}}
     </ion-card-content>
   </ion-card>
+  <ion-tabs class="paraAtras">
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button (click)="toHome()">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="toTripHistory()">
+        <ion-icon name="location"></ion-icon>
+        <ion-label>Hisorial</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button (click)="toProfile()">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+
 </ion-content>
